maze.wallfindfollow.WallFindFollowMaze.scala.error
Compilation error:
WallFindFollowMaze:3: error: value unary_! is not a member of Unit
  if(!hasWallLeft())
     ^WallFindFollowMaze:25: warning: enclosing method hasWallLeft has result type Unit: return value discarded
  return isThere;
  ^